--- a/architecture/feature-extractor/Dockerfile
+++ b/architecture/feature-extractor/Dockerfile
@@ -8,6 +8,9 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY libs/NTLFlowLyzer ./libs/NTLFlowLyzer
 
 WORKDIR /app/libs/NTLFlowLyzer
