--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/NTLFlowLyzer"]
-	path = libs/NTLFlowLyzer
+[submodule "architecture/feature-extractor/libs/NTLFlowLyzer"]
+	path = architecture/feature-extractor/libs/NTLFlowLyzer
 	url = https://github.com/ahlashkari/NTLFlowLyzer.git
