--- a/architecture/docker-compose.yml
+++ b/architecture/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - ./traffic-sniffer/logs:/app/logs
       - shared-pcap-data:/shared/pcap
-      - ./architecture/utils:/app/utils
+      - ./utils:/app/utils
     
     restart: unless-stopped
     
@@ -63,7 +63,7 @@ services:
       - ./feature-extractor/output:/app/output
       - ./feature-extractor/config.json:/app/config.json
       - ./feature-extractor/logs:/app/logs
-      - ./architecture/utils:/app/utils
+      - ./utils:/app/utils
     
     restart: unless-stopped
     
@@ -93,7 +93,7 @@ services:
     volumes:
       - ../notebook/models/v1:/app/model
       - ./ids/logs:/app/logs
-      - ./architecture/utils:/app/utils
+      - ./utils:/app/utils
 
     restart: unless-stopped
 
